test ECDSA/RSA Authentication key

--- a/.travis.yml
+++ b/.travis.yml
@@ -137,17 +137,23 @@ script:
   - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
   - GPGEnc
   - GPGSign
+  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
+  - GPGSign
   - GPGReset
   - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to 25519
   - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
   - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
   - GPGEnc
   - GPGSign
+  - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
+  - GPGSign
   - GPGReset
   - echo -e 'admin\nkey-attr\n2\n3\n2\n3\n2\n3\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC P-256
   - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
   - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
   - GPGEnc
+  - GPGSign
+  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
   - GPGSign
   - GPGReset
   - gpgconf --kill gpg-agent
