--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,8 @@ script:
   - KEYID=$(gpg -K --with-colons |grep -P '^sec'|grep -oP '\w{16}')
   - Addkey() { echo -e "addkey\n$1\n$2\n0\nsave" | gpg --yes --expert --command-fd 0 --edit-key $KEYID; }
   - Key2card() { echo -e "key $1\nkeytocard\n$2\nsave" | gpg --yes --command-fd 0 --edit-key $KEYID; gpg --card-status; }
+  - Addcardkey() { echo -e 'addcardkey\n$1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID; }
+  - "ChangeUsage() { SUBKEY=$(gpg -K --with-colons|awk -F: '$1~/ssb/ && $12~/a/ {print $5}'|tail -n 1); echo -e \"key $SUBKEY\\nchange-usage\\nS\\nQ\\ncross-certify\\nsave\" | gpg --yes --expert --command-fd 0 --edit-key $KEYID; }"
   - "GPGSign() { date -Iseconds | gpg --armor --default-key $(gpg -K --with-colons|awk -F: '$1~/ssb/ && $12~/s|a/ {print $5}'|tail -n 1)! -s|gpg; }"
   - "GPGEnc()  { date -Iseconds | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1~/ssb/ && $12~/e/ {print $5}'|tail -n 1) --encrypt|gpg; }"
   - GPGReset() { echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card; } # clear all keys, no pin verification at all
@@ -133,27 +135,30 @@ script:
   - GPGReset
   - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card
   - echo -e 'admin\nkey-attr\n1\n2048\n1\n2048\n1\n2048\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to RSA2048
-  - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
-  - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
+  - Addcardkey 1 # generate Signature key on card
+  - Addcardkey 2 # generate Encryption key on card
   - GPGEnc
   - GPGSign
-  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
+  - Addcardkey 3 # generate Authentication key on card
+  - ChangeUsage
   - GPGSign
   - GPGReset
   - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to 25519
-  - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
-  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
+  - Addcardkey 1 # generate Signature key on card
+  - Addcardkey 2 # generate Encryption key on card
   - GPGEnc
   - GPGSign
-  - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
+  - Addcardkey 3 # generate Authentication key on card
+  - ChangeUsage
   - GPGSign
   - GPGReset
   - echo -e 'admin\nkey-attr\n2\n3\n2\n3\n2\n3\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC P-256
-  - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
-  - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
+  - Addcardkey 1 # generate Signature key on card
+  - Addcardkey 2 # generate Encryption key on card
   - GPGEnc
   - GPGSign
-  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
+  - Addcardkey 3 # generate Authentication key on card
+  - ChangeUsage
   - GPGSign
   - GPGReset
   - gpgconf --kill gpg-agent
