--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,14 @@ include(FindPkgConfig)
 project(canokey-core C)
 
 option(ENABLE_TESTS "Perform unit tests after build" OFF)
+option(ENABLE_FUZZING "Build for fuzzing" OFF)
 option(ENABLE_DEBUG_OUTPUT "Print debug messages" ON)
-if (ENABLE_TESTS)
-    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-endif (ENABLE_TESTS)
 if (ENABLE_DEBUG_OUTPUT)
     add_definitions(-DDEBUG_OUTPUT)
 endif (ENABLE_DEBUG_OUTPUT)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -Wall -fstack-usage -fno-omit-frame-pointer --coverage")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fno-omit-frame-pointer")
 
 add_subdirectory(canokey-crypto)
 
@@ -22,9 +20,9 @@ file(GLOB_RECURSE SRC src/*.c applets/*.c interfaces/*.c
         tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
 
 add_library(canokey-core ${SRC})
-if (ENABLE_TESTS)
+if (ENABLE_TESTS OR ENABLE_FUZZING)
     target_compile_definitions(canokey-core PUBLIC -DTEST)
-endif (ENABLE_TESTS)
+endif (ENABLE_TESTS OR ENABLE_FUZZING)
 target_include_directories(canokey-core SYSTEM
         PUBLIC
         include
@@ -40,6 +38,9 @@ target_link_libraries(canokey-core canokey-crypto)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
 
 if (ENABLE_TESTS)
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage")
+
     find_package(CMocka CONFIG REQUIRED)
     include(AddCMockaTest)
     include(AddMockedTest)
@@ -57,3 +58,14 @@ if (ENABLE_TESTS)
         target_link_libraries(u2f-virt-card ${PCSCLITE_LIBRARIES} canokey-core)
     endif ()
 endif (ENABLE_TESTS)
+
+if (ENABLE_FUZZING)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
+    add_executable(honggfuzz-fuzzer
+            fuzzer/honggfuzz-fuzzer.c
+            fuzzer/dummy.c
+            virt-card/fabrication.c
+            littlefs/emubd/lfs_emubd.c)
+    target_include_directories(honggfuzz-fuzzer SYSTEM PRIVATE virt-card littlefs)
+    target_link_libraries(honggfuzz-fuzzer canokey-core)
+endif (ENABLE_FUZZING)
