--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ script:
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
   - # OpenPGP tests:
   - pkill gpg-agent || true
-  - echo 'enable-ssh-support' > ~/.gnupg/gpg-agent.conf
+  - #echo 'enable-ssh-support' > ~/.gnupg/gpg-agent.conf
   - gpg --version
   - export SSH_AUTH_SOCK=`gpgconf --list-dirs agent-ssh-socket`
   - mkdir /tmp/mock
