Replace emubd -> filebd to accomodate littlefs upstream changes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_mocked_test(openpgp
-        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
+        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/bd/lfs_filebd.c ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
         LINK_LIBRARIES canokey-core)
 
 add_mocked_test(oath
-        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
+        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/bd/lfs_filebd.c ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
         LINK_LIBRARIES canokey-core)
 
 add_mocked_test(apdu
