--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,3 +9,7 @@ add_mocked_test(oath
 add_mocked_test(apdu
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
         LINK_LIBRARIES canokey-core)
+
+add_mocked_test(piv
+        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/bd/lfs_filebd.c ${CMAKE_CURRENT_SOURCE_DIR}/../virt-card/dummy.c
+        LINK_LIBRARIES canokey-core)
