--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -256,9 +256,9 @@ jobs:
     
     - name: Upload the Converage Stat
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.github_token }}
-      run: |
-        coveralls -b build -E '.*/build/.+\.c' -e fuzzer -e fuzzing -e gnupg -e canokey-crypto -e virt-card -e u2f-ref-code -e tinycbor -e littlefs -e test -e interfaces --gcov-options '\-lp'
+        COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TRAVIS_JOB_ID: $GITHUB_RUN_ID
+      run: coveralls # read options from .coveralls.yml
     
     - name: Upload log files
       if: ${{ always() }}
