--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,12 @@ jobs:
         go-version: 1.13
       id: go
 
+    - name: Cache GO Modules
+      uses: actions/cache@v1
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-global
+
     - name: Check out code
       uses: actions/checkout@v2
       with:
