--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,6 +57,15 @@ jobs:
         cmake .. -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug
         make -j2
       
+    - name: Setup a SSH Server
+      run: |
+        cat >/tmp/sshd_config <<EOF
+        StrictModes no
+        UsePAM no
+        Port 2200
+        EOF
+        sudo /usr/sbin/sshd -f /tmp/sshd_config
+
     - name: Smoking Tests
       run: |
         cd build
@@ -118,9 +127,8 @@ jobs:
         GPGEnc()  { date -Iseconds | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1~/ssb/ && $12~/e/ {print $5}'|tail -n 1) --encrypt|gpg; }
         GPGAuth() {
           gpg -K --with-colons | awk -F: '$1~/ssb/ && $12~/s/{lg=NR+2} NR==lg{grip=$10} END{print grip}' >~/.gnupg/sshcontrol
-          ssh-add -L
-          #ssh-add -L >~/.ssh/authorized_keys
-          #ssh -v -o StrictHostKeyChecking=no -o PasswordAuthentication=no localhost id;
+          ssh-add -L >~/.ssh/authorized_keys
+          ssh -v -p 2200 -o StrictHostKeyChecking=no -o PasswordAuthentication=no localhost id
         }
         GPGReset() { echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card; } # clear all keys, no pin verification at all
         Key2card 1 1 # key[1] to Signature key
