Fix building on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,11 @@ if (ENABLE_DEBUG_OUTPUT)
 endif (ENABLE_DEBUG_OUTPUT)
 if (ENABLE_TESTS)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage")
+    if (CMAKE_C_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
+    else()
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage")
+    endif()
 endif (ENABLE_TESTS)
 if (ENABLE_FUZZING)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
@@ -65,7 +69,7 @@ if (ENABLE_TESTS)
             virt-card/fido-hid-over-udp.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(fido-hid-over-udp SYSTEM PRIVATE virt-card littlefs)
-    target_link_libraries(fido-hid-over-udp general canokey-core asan)
+    target_link_libraries(fido-hid-over-udp general canokey-core "-fsanitize=address")
     target_compile_options(fido-hid-over-udp PRIVATE "-fsanitize=address")
 
     add_executable(usbip
@@ -73,7 +77,7 @@ if (ENABLE_TESTS)
             virt-card/fabrication.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(usbip SYSTEM PRIVATE littlefs)
-    target_link_libraries(usbip general canokey-core asan)
+    target_link_libraries(usbip general canokey-core "-fsanitize=address")
     target_compile_options(usbip PRIVATE "-fsanitize=address")
 
     pkg_search_module(PCSCLITE libpcsclite)
