--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -199,6 +199,8 @@ jobs:
         #echo -e 'admin\nlogin\naaaaaaaaaaaa00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\nquit' | gpg --yes --command-fd 0 --edit-card
         echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --edit-card
         echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg --yes --command-fd 0 --edit-card
+        # Private DO 1/2 is not implemented
+        # TODO: put 3 certificates
         gpgconf --kill gpg-agent # restart agent to clear cached info
         gpg --card-status
         echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
@@ -220,11 +222,18 @@ jobs:
         yubico-piv-tool -r "$RDID" -a verify-pin -P 123456 2>&1 | grep '2 tries left before pin is blocked.'
         yubico-piv-tool -r "$RDID" -a verify-pin -P 123456 2>&1 | grep '1 tries left before pin is blocked.'
         yubico-piv-tool -r "$RDID" -a verify-pin -P 654321
+        yubico-piv-tool -r "$RDID" -a set-mgm-key -n F1F2F3F4F5F6F7F8F1F2F3F4F5F6F7F8F1F2F3F4F5F6F7F8
+        yubico-piv-tool -r "$RDID" -k F1F2F3F4F5F6F7F8F1F2F3F4F5F6F7F8F1F2F3F4F5F6F7F8 -a set-mgm-key -n 010203040506070801020304050607080102030405060708
         ## Key generation
-        yubico-piv-tool -r "$RDID" -a set-mgm-key -n 010203040506070801020304050607080102030405060708
-        yubico-piv-tool -r "$RDID" -a generate -s 9e >/tmp/pubkey-9e.pem # generate key at 9E
-        yubico-piv-tool -r "$RDID" -a selfsign-certificate -s 9e -S '/CN=CertAtSlot9e' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
-        yubico-piv-tool -r "$RDID" -a import-certificate -s 9e < /tmp/cert-9e.pem
+        PIVGenKeyCert() {
+          slot=$1
+          subject="$2"
+          algo="$3"
+          yubico-piv-tool -r "$RDID" -a generate -A $algo -s $slot >/tmp/pubkey-$slot.pem # generate key at $slot
+          yubico-piv-tool -r "$RDID" -a selfsign-certificate -s $slot -S "$subject" < /tmp/pubkey-$slot.pem >/tmp/cert-$slot.pem
+          yubico-piv-tool -r "$RDID" -a import-certificate -s $slot < /tmp/cert-$slot.pem
+        }
+        PIVGenKeyCert 9e '/CN=CertAtSlot9e' RSA2048
         yubico-piv-tool -r "$RDID" -a status
         yubico-piv-tool -r "$RDID" -a test-signature -s 9e < /tmp/cert-9e.pem
         yubico-piv-tool -r "$RDID" -a test-decipher -s 9e < /tmp/cert-9e.pem
@@ -232,15 +241,9 @@ jobs:
         echo -n hello >/tmp/hello.txt
         pkcs11-tool --slot "$RDID" -d 04 -s -m SHA256-RSA-PKCS -i /tmp/hello.txt -o /tmp/hello-signed --pin 654321
         openssl dgst -sha256 -verify /tmp/pubkey-9e.pem -signature /tmp/hello-signed /tmp/hello.txt
-        yubico-piv-tool -r "$RDID" -a generate -s 9a >/tmp/pubkey-9a.pem # generate key at 9a
-        yubico-piv-tool -r "$RDID" -a selfsign-certificate -s 9a -S '/CN=CertAtSlot9a' < /tmp/pubkey-9a.pem >/tmp/cert-9a.pem
-        yubico-piv-tool -r "$RDID" -a import-certificate -s 9a < /tmp/cert-9a.pem
-        yubico-piv-tool -r "$RDID" -a generate -A ECCP256 -s 9c >/tmp/pubkey-9c.pem # generate key at 9c
-        yubico-piv-tool -r "$RDID" -a selfsign-certificate -s 9c -S '/CN=CertAtSlot9c' < /tmp/pubkey-9c.pem >/tmp/cert-9c.pem
-        yubico-piv-tool -r "$RDID" -a import-certificate -s 9c < /tmp/cert-9c.pem
-        yubico-piv-tool -r "$RDID" -a generate -A ECCP256 -s 9d >/tmp/pubkey-9d.pem # generate key at 9d
-        yubico-piv-tool -r "$RDID" -a selfsign-certificate -s 9d -S '/CN=CertAtSlot9d' < /tmp/pubkey-9d.pem >/tmp/cert-9d.pem
-        yubico-piv-tool -r "$RDID" -a import-certificate -s 9d < /tmp/cert-9d.pem
+        PIVGenKeyCert 9a '/CN=CertAtSlot9a' RSA2048
+        PIVGenKeyCert 9c '/CN=CertAtSlot9c' ECCP256
+        PIVGenKeyCert 9d '/CN=CertAtSlot9d' ECCP256
         yubico-piv-tool -r "$RDID" -a status
         ## PIN unblock
         yubico-piv-tool -r "$RDID" -P 654321 -a verify-pin -a test-signature -s 9a < /tmp/cert-9a.pem
