--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -290,8 +290,8 @@ jobs:
         yubico-piv-tool -r "$RDID" -a unblock-pin -P 12345678 -N 654321 2>&1 | grep 'Successfully unblocked the pin code'
         ## Fill this applet as much as possible
         yubico-piv-tool -r "$RDID" -a set-ccc -a set-chuid -a status
-        longName=ThisIsAVeryLongName
-        for s in 9a 9c 9d 9e; do PIVGenKeyCert $s "/CN=CertAtSlot$s/OU=$longName/O=Canokeys" RSA2048; done
+        longName=OU=ThisIsAVeryLongNameThisIsAVeryLongNameThisIsAVeryLongName0000000/O=ThisIsAVeryLongNameThisIsAVeryLongNameThisIsAVeryLongName/L=ThisIsAVeryLongNameThisIsAVeryLongNameThisIsAVeryLongName/ST=State0/C=CN
+        for s in 9a 9c 9d 9e; do PIVGenKeyCert $s "/CN=CertAtSlot$s/$longName" RSA2048; done
     
     - name: Upload the Test Coverage Stat
       env:
